--- a/pages/homeworkTeacher/homeworkTeacher.wxml
+++ b/pages/homeworkTeacher/homeworkTeacher.wxml
@@ -41,7 +41,7 @@
       </view>
 
       <view class='bg-white padding radius shadow-lg' wx:else>
-        <input placeholder="请输入作业名" class='content text-bold' name='homeworkName' bindinput='inputHomeworkName'></input>
+        <input placeholder="请输入作业名" class='content text-bold' value='{{homeworkName}}' name='homeworkName' bindinput='inputHomeworkName'></input>
         <view class='cu-steps'>
           <view class='cu-item {{index>questionIndex?"":"text-blue"}}' wx:for="{{questionNum}}" wx:key>
             <text class='num' data-index='{{index + 1}}'></text>
@@ -65,7 +65,7 @@
       <view class="cu-form-group" wx:if='{{isAdd}}'>
         <view class='title text-bold'>题目类型</view>
         <view>是否多选题？</view>
-        <switch bindchange='questionTypeChange'></switch>
+        <switch bindchange='questionTypeChange' checked='{{questionType}}'></switch>
       </view>
       <view class="cu-form-group" wx:if='{{isAdd}}'>
         <view class='title text-bold'>选项设置</view>
@@ -73,14 +73,36 @@
       </view>
 
       <block wx:if="{{isAdd}}">
-        <radio-group class="block margin-top" bindchange="checkboxChange">
-          <view class="cu-form-group" wx:for="{{choseNum}}" wx:key="{{index}}">
-            <input placeholder="请输入选项文字" class='radius' name='input'></input>
-            <view>
-              <radio class='round blue' value="{{index}}"></radio>
+        <radio-group class="section block margin-top" bindchange="checkboxChange" wx:if='{{!questionType}}'>
+          <form  bindsubmit='inputChose'>
+            <view class="cu-form-group" wx:for="{{choseNum}}" wx:key="{{index}}">
+              <input placeholder="请输入选项文字" class='radius' name='chose{{index}}' value='{{chose}}'></input>
+              <view>
+                <radio class='round blue' value="{{index}}"></radio>
+              </view>
             </view>
-          </view>
-        </radio-group>
+            <view class="flex padding justify-center align-center">
+              <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionStepsBack'>上一题</button>
+              <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionSteps' form-type='submit'>下一题</button>
+              <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionFinished' form-type='submit'>完成</button>
+            </view>
+          </form>
+        </radio-group>  
+        <checkbox-group class="section block margin-top" bindchange="checkboxChange" wx:else>
+          <form  bindsubmit='inputChose'>
+            <view class="cu-form-group" wx:for="{{choseNum}}" wx:key="{{index}}">
+              <input placeholder="请输入选项文字" class='radius' name='chose{{index}}' value='{{chose}}'></input>
+              <view>
+                <radio class='round blue' value="{{index}}"></radio>
+              </view>
+            </view>
+            <view class="flex padding justify-center align-center">
+              <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionStepsBack'>上一题</button>
+              <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionSteps' form-type='submit'>下一题</button>
+              <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionFinished' form-type='submit'>完成</button>
+            </view>
+          </form>
+        </checkbox-group>
       </block>
       
       <block wx:if='{{!isAdd}}'>
@@ -115,14 +137,8 @@
         </block>
       </block>
 
-      <view class="flex padding justify-center align-center" wx:if='{{isAdd}}'>
-        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionStepsBack'>上一题</button>
-        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionSteps'>下一题</button>
-        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionFinished'>完成</button>
-      </view>
-
-      <view class="flex padding justify-center align-center" wx:else>
-        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionSteps' wx:if="{{questionIndex == questionList.length - 1}}">完成</button>
+      <view class="flex padding justify-center align-center" wx:if='{{!isAdd}}'>
+        <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='backCard' wx:if="{{questionIndex == questionList.length - 1}}">完成</button>
         <button class="cu-btn bg-blue lg shadow margin-xs" bindtap='questionSteps' wx:else>下一题</button>
       </view>
     </view>
